--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@
 #spring.datasource.password=password
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
-
+server.port=9090
 spring.data.mongodb.database=MainToDoList
 spring.main.allow-circular-references=true
